--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.karamanmert</groupId>
-    <artifactId>java-basics</artifactId>
+    <artifactId>design-patterns</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
